--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "gadd"
-version = "0.1.0"
+version = "0.2.0"
 description = "Sort imports, remove unused imports, run Black, flake8, pylint, vulture in one go for al staged .py files"
 authors = ["Almaz Kunpeissov <hello@akun.dev>"]
 keywords = ["Black", "Sort imports", "analysis", "automation", "autopep8", "code", "flake8", "formatter", "gofmt", "lint", "linter", "pyfmt", "pylint", "python", "remove unused imports", "rustfmt", "static", "vulture", "yapf"]
@@ -21,7 +21,7 @@ classifiers = [
 [tool.poetry.dependencies]
 python = "^3.6"
 autoflake = "^1.4"
-black = "^21.10"
+black = "^21"
 flake8 =  "^4.0"
 gitpython = "^3.1"
 isort =  "^5.10"
@@ -29,6 +29,9 @@ pylint = "^2.11"
 vulture = "^2.3"
 
 [tool.poetry.dev-dependencies]
+
+[tool.poetry.scripts]
+cli_command_name = 'gadd:main'
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
