--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "gadd"
-version = "0.2.0"
+version = "0.1.1"
 description = "Sort imports, remove unused imports, run Black, flake8, pylint, vulture in one go for al staged .py files"
 authors = ["Almaz Kunpeissov <hello@akun.dev>"]
 keywords = ["Black", "Sort imports", "analysis", "automation", "autopep8", "code", "flake8", "formatter", "gofmt", "lint", "linter", "pyfmt", "pylint", "python", "remove unused imports", "rustfmt", "static", "vulture", "yapf"]
@@ -20,13 +20,13 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = "^3.6"
-autoflake = "^1.4"
-black = "^21"
-flake8 =  "^4.0"
-gitpython = "^3.1"
-isort =  "^5.10"
-pylint = "^2.11"
-vulture = "^2.3"
+autoflake = "==1.4.*"
+black = "==21.*"
+flake8 =  "==4.0.*"
+gitpython = "==3.1.*"
+isort =  "==5.10.*"
+pylint = "==2.11.*"
+vulture = "==2.3.*"
 
 [tool.poetry.dev-dependencies]
 
