--- a/Pipfile
+++ b/Pipfile
@@ -4,13 +4,13 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-gitpython = "*"
-isort = "*"
-autoflake = "*"
-black = "*"
-flake8 = "*"
-pylint = "*"
-vulture = "*"
+gitpython = "==3.1.*"
+isort = "==5.10.*"
+autoflake = "==1.4.*"
+black = "==21.10b0"
+flake8 = "==3.*"
+pylint = "==2.11.*"
+vulture = "==2.3.*"
 
 [dev-packages]
 pytest = "*"
